syntax = "proto3";

package authorization;

// ============================================================================
// Data Plane Service - High-performance authorization decisions
// ============================================================================

service AuthorizationData {
  // Evaluate a single authorization request
  rpc IsAuthorized(IsAuthorizedRequest) returns (IsAuthorizedResponse);

  // Evaluate multiple authorization requests in a single call
  rpc BatchIsAuthorized(BatchIsAuthorizedRequest) returns (BatchIsAuthorizedResponse);

  // Evaluate authorization with JWT token
  rpc IsAuthorizedWithToken(IsAuthorizedWithTokenRequest) returns (IsAuthorizedResponse);
}

// Request for authorization decision
message IsAuthorizedRequest {
  // The policy store to evaluate against
  string policy_store_id = 1;

  // The principal making the request (e.g., "User::\"alice\"")
  EntityIdentifier principal = 2;

  // The action being performed (e.g., "Action::\"viewDocument\"")
  EntityIdentifier action = 3;

  // The resource being accessed (e.g., "Document::\"doc123\"")
  EntityIdentifier resource = 4;

  // Additional context for the request (e.g., IP address, time)
  optional string context = 5; // JSON string

  // Entity data slice for attribute-based evaluation
  repeated Entity entities = 6;
}

// Response with authorization decision
message IsAuthorizedResponse {
  // The decision result
  Decision decision = 1;

  // IDs of policies that determined this decision
  repeated string determining_policies = 2;

  // Any errors that occurred during evaluation
  repeated string errors = 3;
}

// Authorization decision
enum Decision {
  DECISION_UNSPECIFIED = 0;
  ALLOW = 1;
  DENY = 2;
}

// Batch authorization request
message BatchIsAuthorizedRequest {
  string policy_store_id = 1;
  repeated IsAuthorizedRequest requests = 2;
}

// Batch authorization response
message BatchIsAuthorizedResponse {
  repeated IsAuthorizedResponse responses = 1;
}

// ============================================================================
// Control Plane Service - Policy and schema management
// ============================================================================

service AuthorizationControl {
  // Create a new policy store
  rpc CreatePolicyStore(CreatePolicyStoreRequest) returns (CreatePolicyStoreResponse);

  // Get policy store details
  rpc GetPolicyStore(GetPolicyStoreRequest) returns (GetPolicyStoreResponse);

  // List all policy stores
  rpc ListPolicyStores(ListPolicyStoresRequest) returns (ListPolicyStoresResponse);

  // Delete a policy store
  rpc DeletePolicyStore(DeletePolicyStoreRequest) returns (DeletePolicyStoreResponse);

  // Update a policy store
  rpc UpdatePolicyStore(UpdatePolicyStoreRequest) returns (UpdatePolicyStoreResponse);

  // Put or update schema for a policy store
  rpc PutSchema(PutSchemaRequest) returns (PutSchemaResponse);

  // Get schema for a policy store
  rpc GetSchema(GetSchemaRequest) returns (GetSchemaResponse);

  // Create a new policy
  rpc CreatePolicy(CreatePolicyRequest) returns (CreatePolicyResponse);

  // Get a policy
  rpc GetPolicy(GetPolicyRequest) returns (GetPolicyResponse);

  // Update a policy
  rpc UpdatePolicy(UpdatePolicyRequest) returns (UpdatePolicyResponse);

  // Delete a policy
  rpc DeletePolicy(DeletePolicyRequest) returns (DeletePolicyResponse);

  // List policies in a policy store
  rpc ListPolicies(ListPoliciesRequest) returns (ListPoliciesResponse);

  // Create an identity source
  rpc CreateIdentitySource(CreateIdentitySourceRequest) returns (CreateIdentitySourceResponse);

  // Get identity source details
  rpc GetIdentitySource(GetIdentitySourceRequest) returns (GetIdentitySourceResponse);

  // List identity sources
  rpc ListIdentitySources(ListIdentitySourcesRequest) returns (ListIdentitySourcesResponse);

  // Delete an identity source
  rpc DeleteIdentitySource(DeleteIdentitySourceRequest) returns (DeleteIdentitySourceResponse);

  // Create a policy template (Épica 6)
  rpc CreatePolicyTemplate(CreatePolicyTemplateRequest) returns (CreatePolicyTemplateResponse);

  // Get policy template details
  rpc GetPolicyTemplate(GetPolicyTemplateRequest) returns (GetPolicyTemplateResponse);

  // List policy templates
  rpc ListPolicyTemplates(ListPolicyTemplatesRequest) returns (ListPolicyTemplatesResponse);

  // Delete a policy template
  rpc DeletePolicyTemplate(DeletePolicyTemplateRequest) returns (DeletePolicyTemplateResponse);

  // ========================================================================
  // Playground / Testing Endpoints
  // ========================================================================

  // Test authorization without persisting policies (Playground)
  rpc TestAuthorization(TestAuthorizationRequest) returns (TestAuthorizationResponse);

  // Validate policy syntax and semantics against schema
  rpc ValidatePolicy(ValidatePolicyRequest) returns (ValidatePolicyResponse);

  // ========================================================================
  // Version Control / Snapshot Management
  // ========================================================================

  // Create a snapshot of the policy store (with all policies and schema)
  rpc CreatePolicyStoreSnapshot(CreatePolicyStoreSnapshotRequest) returns (CreatePolicyStoreSnapshotResponse);

  // Get a snapshot by ID
  rpc GetPolicyStoreSnapshot(GetPolicyStoreSnapshotRequest) returns (GetPolicyStoreSnapshotResponse);

  // List all snapshots for a policy store
  rpc ListPolicyStoreSnapshots(ListPolicyStoreSnapshotsRequest) returns (ListPolicyStoreSnapshotsResponse);

  // Rollback to a specific snapshot (restore all policies and schema)
  rpc RollbackToSnapshot(RollbackToSnapshotRequest) returns (RollbackToSnapshotResponse);

  // Delete a snapshot
  rpc DeleteSnapshot(DeleteSnapshotRequest) returns (DeleteSnapshotResponse);

  // ========================================================================
  // Batch Policy Management
  // ========================================================================

  // Batch create multiple policies at once
  rpc BatchCreatePolicies(BatchCreatePoliciesRequest) returns (BatchCreatePoliciesResponse);

  // Batch update multiple policies at once
  rpc BatchUpdatePolicies(BatchUpdatePoliciesRequest) returns (BatchUpdatePoliciesResponse);

  // Batch delete multiple policies at once
  rpc BatchDeletePolicies(BatchDeletePoliciesRequest) returns (BatchDeletePoliciesResponse);

  // Update policy store tags
  rpc UpdatePolicyStoreTags(UpdatePolicyStoreTagsRequest) returns (UpdatePolicyStoreTagsResponse);

}

// ============================================================================
// Policy Store Management
// ============================================================================

message CreatePolicyStoreRequest {
  // Policy store name (required)
  string name = 1;
  // Optional description
  optional string description = 2;
}

message CreatePolicyStoreResponse {
  string policy_store_id = 1;
  string created_at = 2;
}

message GetPolicyStoreRequest {
  string policy_store_id = 1;
}

message GetPolicyStoreResponse {
  string policy_store_id = 1;
  string name = 2;
  optional string description = 3;
  // Current status of the policy store (active/inactive)
  string status = 4;
  // Version number for versioning support
  string version = 5;
  // Author/owner of the policy store
  string author = 6;
  // List of tags for categorization
  repeated string tags = 7;
  // List of identity source IDs associated with this policy store
  repeated string identity_source_ids = 8;
  // Default identity source ID to use when not explicitly specified
  optional string default_identity_source_id = 9;
  string created_at = 10;
  string updated_at = 11;
}

message ListPolicyStoresRequest {
  optional int32 max_results = 1;
  optional string next_token = 2;
}

message ListPolicyStoresResponse {
  repeated PolicyStoreItem policy_stores = 1;
  optional string next_token = 2;
}

message PolicyStoreItem {
  string policy_store_id = 1;
  string name = 2;
  optional string description = 3;
  // Current status of the policy store (active/inactive)
  string status = 4;
  // Version number for versioning support
  string version = 5;
  // Author/owner of the policy store
  string author = 6;
  // List of tags for categorization
  repeated string tags = 7;
  // List of identity source IDs associated with this policy store
  repeated string identity_source_ids = 8;
  // Default identity source ID to use when not explicitly specified
  optional string default_identity_source_id = 9;
  string created_at = 10;
  string updated_at = 11;
}

message DeletePolicyStoreRequest {
  string policy_store_id = 1;
}

message DeletePolicyStoreResponse {
  // Empty response
}

message UpdatePolicyStoreRequest {
  string policy_store_id = 1;
  optional string name = 2;
  optional string description = 3;
  optional string status = 4;
}

message UpdatePolicyStoreResponse {
  string policy_store_id = 1;
  string name = 2;
  optional string description = 3;
  optional string status = 4;
  string updated_at = 5;
}

// ============================================================================
// Schema Management
// ============================================================================

message PutSchemaRequest {
  string policy_store_id = 1;
  string schema = 2; // Cedar schema in JSON format
}

message PutSchemaResponse {
  string policy_store_id = 1;
  repeated string namespaces = 2;
}

message GetSchemaRequest {
  string policy_store_id = 1;
}

message GetSchemaResponse {
  string policy_store_id = 1;
  string schema = 2; // Cedar schema in JSON format
  string created_at = 3;
  string updated_at = 4;
}

// ============================================================================
// Policy Management
// ============================================================================

message CreatePolicyRequest {
  string policy_store_id = 1;
  string policy_id = 2;
  PolicyDefinition definition = 3;
  optional string description = 4;
}

message CreatePolicyResponse {
  string policy_store_id = 1;
  string policy_id = 2;
  string created_at = 3;
}

message GetPolicyRequest {
  string policy_store_id = 1;
  string policy_id = 2;
}

message GetPolicyResponse {
  string policy_store_id = 1;
  string policy_id = 2;
  PolicyDefinition definition = 3;
  optional string description = 4;
  string created_at = 5;
  string updated_at = 6;
}

message UpdatePolicyRequest {
  string policy_store_id = 1;
  string policy_id = 2;
  PolicyDefinition definition = 3;
  optional string description = 4;
}

message UpdatePolicyResponse {
  string policy_store_id = 1;
  string policy_id = 2;
  string updated_at = 3;
}

message DeletePolicyRequest {
  string policy_store_id = 1;
  string policy_id = 2;
}

message DeletePolicyResponse {
  // Empty response
}

message ListPoliciesRequest {
  string policy_store_id = 1;
  optional int32 max_results = 2;
  optional string next_token = 3;
}

message ListPoliciesResponse {
  repeated PolicyItem policies = 1;
  optional string next_token = 2;
}

message PolicyItem {
  string policy_id = 1;
  optional string description = 2;
  string created_at = 3;
}

// ============================================================================
// Common Data Types
// ============================================================================

// Entity identifier (e.g., "User::\"alice\"")
message EntityIdentifier {
  string entity_type = 1; // e.g., "User"
  string entity_id = 2;   // e.g., "alice"
}

// Entity with attributes and parents
message Entity {
  EntityIdentifier identifier = 1;
  map<string, string> attributes = 2; // JSON-encoded attribute values
  repeated EntityIdentifier parents = 3; // Parent entities in hierarchy
}

// Policy definition
message PolicyDefinition {
  oneof policy_type {
    StaticPolicy static = 1;
    TemplateLinkedPolicy template_linked = 2;
  }
}

// Static Cedar policy
message StaticPolicy {
  string statement = 1; // Cedar policy text
}

// Template-linked policy (for future use)
message TemplateLinkedPolicy {
  string policy_template_id = 1;
  EntityIdentifier principal = 2;
  EntityIdentifier resource = 3;
}

// ============================================================================
// Identity Source Management (Épica 4)
// ============================================================================

// Identity source configuration
message IdentitySourceConfiguration {
  oneof configuration_type {
    CognitoUserPoolConfiguration cognito_user_pool = 1;
    OidcConfiguration oidc = 2;
  }
}

// AWS Cognito User Pool configuration
message CognitoUserPoolConfiguration {
  string user_pool_arn = 1;
  string client_ids = 2; // Comma-separated list
  string group_configuration_group_claim = 3; // Claim for groups (e.g., "cognito:groups")
}

// Generic OIDC configuration
message OidcConfiguration {
  string issuer = 1; // OIDC issuer URL
  repeated string client_ids = 2; // Allowed client IDs (audience)
  string jwks_uri = 3; // URL to fetch signing keys
  string group_claim = 4; // Claim for groups/roles
}

// Claims mapping configuration
message ClaimsMappingConfiguration {
  string principal_id_claim = 1; // Claim to use as entity ID (default: "sub")
  string group_claim = 2; // Claim for group membership
  map<string, string> attribute_mappings = 3; // Map claims to Cedar attributes
}

// Request to create identity source
message CreateIdentitySourceRequest {
  string policy_store_id = 1;
  IdentitySourceConfiguration configuration = 2;
  optional ClaimsMappingConfiguration claims_mapping = 3;
  optional string description = 4;
}

// Response from creating identity source
message CreateIdentitySourceResponse {
  string identity_source_id = 1;
  string created_at = 2;
}

// Request to get identity source
message GetIdentitySourceRequest {
  string policy_store_id = 1;
  string identity_source_id = 2;
}

// Response with identity source details
message GetIdentitySourceResponse {
  string identity_source_id = 1;
  string policy_store_id = 2;
  IdentitySourceConfiguration configuration = 3;
  optional ClaimsMappingConfiguration claims_mapping = 4;
  optional string description = 5;
  string created_at = 6;
  string updated_at = 7;
}

// Request to list identity sources
message ListIdentitySourcesRequest {
  string policy_store_id = 1;
  optional int32 max_results = 2;
  optional string next_token = 3;
}

// Response with list of identity sources
message ListIdentitySourcesResponse {
  repeated IdentitySourceItem identity_sources = 1;
  optional string next_token = 2;
}

// Identity source item in list
message IdentitySourceItem {
  string identity_source_id = 1;
  string policy_store_id = 2;
  optional string description = 3;
  string created_at = 4;
}

// Request to delete identity source
message DeleteIdentitySourceRequest {
  string policy_store_id = 1;
  string identity_source_id = 2;
}

// Response from deleting identity source
message DeleteIdentitySourceResponse {
  string identity_source_id = 1;
}

// Request for authorization with JWT token
message IsAuthorizedWithTokenRequest {
  string policy_store_id = 1;
  string identity_source_id = 2;
  string access_token = 3; // JWT token
  EntityIdentifier action = 4;
  EntityIdentifier resource = 5;
  optional string context = 6; // JSON string
  repeated Entity entities = 7;
}

// ============================================================================
// Policy Template Management (Épica 6)
// ============================================================================

// Request to create policy template
message CreatePolicyTemplateRequest {
  string policy_store_id = 1;
  string template_id = 2;
  string statement = 3; // Cedar policy with ?principal and/or ?resource placeholders
  optional string description = 4;
}

// Response from creating policy template
message CreatePolicyTemplateResponse {
  string template_id = 1;
  string created_at = 2;
}

// Request to get policy template
message GetPolicyTemplateRequest {
  string policy_store_id = 1;
  string template_id = 2;
}

// Response with policy template details
message GetPolicyTemplateResponse {
  string template_id = 1;
  string policy_store_id = 2;
  string statement = 3;
  optional string description = 4;
  string created_at = 5;
  string updated_at = 6;
}

// Request to list policy templates
message ListPolicyTemplatesRequest {
  string policy_store_id = 1;
  optional int32 max_results = 2;
  optional string next_token = 3;
}

// Response with list of policy templates
message ListPolicyTemplatesResponse {
  repeated PolicyTemplateItem templates = 1;
  optional string next_token = 2;
}

// Policy template item in list
message PolicyTemplateItem {
  string template_id = 1;
  string policy_store_id = 2;
  optional string description = 3;
  string created_at = 4;
}

// Request to delete policy template
message DeletePolicyTemplateRequest {
  string policy_store_id = 1;
  string template_id = 2;
}

// Response from deleting policy template
message DeletePolicyTemplateResponse {
  string template_id = 1;
}

// ============================================================================
// Version Control / Snapshot Management
// ============================================================================

// Request to create a snapshot
message CreatePolicyStoreSnapshotRequest {
  string policy_store_id = 1;
  optional string description = 2;
}

// Response from creating a snapshot
message CreatePolicyStoreSnapshotResponse {
  string snapshot_id = 1;
  string policy_store_id = 2;
  string created_at = 3;
  string description = 4;
}

// Request to get a snapshot
message GetPolicyStoreSnapshotRequest {
  string policy_store_id = 1;
  string snapshot_id = 2;
}

// Response with snapshot details
message GetPolicyStoreSnapshotResponse {
  string snapshot_id = 1;
  string policy_store_id = 2;
  string description = 3;
  string created_at = 4;
  int32 policy_count = 5;
  bool has_schema = 6;
  string schema_json = 7; // Included if has_schema is true
  repeated PolicySummary policies = 8; // Included if policy_count > 0
}

// Summary of a policy in snapshot
message PolicySummary {
  string policy_id = 1;
  optional string description = 2;
  string statement = 3; // The Cedar policy statement
}

// Request to list snapshots
message ListPolicyStoreSnapshotsRequest {
  string policy_store_id = 1;
  optional int32 max_results = 2;
  optional string next_token = 3;
}

// Response with list of snapshots
message ListPolicyStoreSnapshotsResponse {
  repeated SnapshotItem snapshots = 1;
  optional string next_token = 2;
}

// Snapshot item in list
message SnapshotItem {
  string snapshot_id = 1;
  string policy_store_id = 2;
  optional string description = 3;
  string created_at = 4;
  int32 policy_count = 5;
  bool has_schema = 6;
  int64 size_bytes = 7; // Approximate size of snapshot data
}

// Request to rollback to snapshot
message RollbackToSnapshotRequest {
  string policy_store_id = 1;
  string snapshot_id = 2;
  optional string description = 3; // Optional note about the rollback
}

// Response from rollback operation
message RollbackToSnapshotResponse {
  string policy_store_id = 1;
  string snapshot_id = 2;
  string rolled_back_at = 3;
  int32 policies_restored = 4;
  bool schema_restored = 5;
}

// Request to delete a snapshot
message DeleteSnapshotRequest {
  string policy_store_id = 1;
  string snapshot_id = 2;
}

// Response from deleting a snapshot
message DeleteSnapshotResponse {
  string snapshot_id = 1;
}

// ============================================================================
// Batch Policy Management
// ============================================================================

// Request for batch create policies
message BatchCreatePoliciesRequest {
  string policy_store_id = 1;
  repeated BatchPolicyItem policies = 2;
}

// Policy item for batch operations
message BatchPolicyItem {
  string policy_id = 1;
  PolicyDefinition definition = 2;
  optional string description = 3;
}

// Response from batch create
message BatchCreatePoliciesResponse {
  repeated BatchPolicyResult results = 1;
  repeated string errors = 2; // Any errors during batch operation
}

// Result of a single policy operation in batch
message BatchPolicyResult {
  string policy_id = 1;
  string created_at = 2;
  optional string error = 3; // Error message if failed
}

// Request for batch update policies
message BatchUpdatePoliciesRequest {
  string policy_store_id = 1;
  repeated BatchPolicyItem policies = 2;
}

// Response from batch update
message BatchUpdatePoliciesResponse {
  repeated BatchUpdatePolicyResult results = 1;
  repeated string errors = 2;
}

// Result of a single policy update in batch
message BatchUpdatePolicyResult {
  string policy_id = 1;
  string updated_at = 2;
  optional string error = 3;
}

// Request for batch delete policies
message BatchDeletePoliciesRequest {
  string policy_store_id = 1;
  repeated string policy_ids = 2;
}

// Response from batch delete
message BatchDeletePoliciesResponse {
  repeated BatchDeletePolicyResult results = 1;
  repeated string errors = 2;
}

// Result of a single policy delete in batch
message BatchDeletePolicyResult {
  string policy_id = 1;
  optional string error = 3;
}

// ============================================================================
// Playground / Testing Messages
// ============================================================================

// Request to test authorization without persisting policies
message TestAuthorizationRequest {
  // Optional policy store ID to use existing schema
  optional string policy_store_id = 1;

  // Schema to use for validation (if not using policy_store_id)
  optional string schema = 2;

  // Policies to test (Cedar policy statements)
  repeated string policies = 3;

  // The principal making the request
  EntityIdentifier principal = 4;

  // The action being performed
  EntityIdentifier action = 5;

  // The resource being accessed
  EntityIdentifier resource = 6;

  // Additional context for the request
  optional string context = 7; // JSON string

  // Entity data slice for attribute-based evaluation
  repeated Entity entities = 8;
}

// Response from test authorization
message TestAuthorizationResponse {
  // The decision result
  Decision decision = 1;

  // IDs of policies that determined this decision
  repeated string determining_policies = 2;

  // Any errors that occurred during evaluation
  repeated string errors = 3;

  // Validation warnings (if schema was provided)
  repeated ValidationIssue validation_warnings = 4;

  // Validation errors (if schema was provided)
  repeated ValidationIssue validation_errors = 5;
}

// Request to validate policy
message ValidatePolicyRequest {
  // Policy store ID to get schema from
  optional string policy_store_id = 1;

  // Schema to validate against (if not using policy_store_id)
  optional string schema = 2;

  // Policy statement to validate
  string policy_statement = 3;
}

// Response from policy validation
message ValidatePolicyResponse {
  // Whether the policy is valid
  bool is_valid = 1;

  // Validation errors
  repeated ValidationIssue errors = 2;

  // Validation warnings
  repeated ValidationIssue warnings = 3;

  // Parsed policy information (if valid)
  optional PolicyInfo policy_info = 4;
}

// Validation issue (error or warning)
message ValidationIssue {
  // Severity level
  enum Severity {
    SEVERITY_UNSPECIFIED = 0;
    ERROR = 1;
    WARNING = 2;
    INFO = 3;
  }

  Severity severity = 1;

  // Issue message
  string message = 2;

  // Location in policy (line, column if available)
  optional string location = 3;

  // Type of issue
  string issue_type = 4;
}

// Information about parsed policy
message PolicyInfo {
  // Policy effect (permit or forbid)
  string effect = 1;

  // Principal scope
  optional string principal_scope = 2;

  // Action scope
  optional string action_scope = 3;

  // Resource scope
  optional string resource_scope = 4;

  // Whether policy has conditions (when/unless)
  bool has_conditions = 5;
}

// ============================================================================
// Policy Store Tags & Audit Log Messages
// ============================================================================

// Request to update policy store tags
message UpdatePolicyStoreTagsRequest {
  string policy_store_id = 1;
  repeated string tags = 2;
}

// Response from updating policy store tags
message UpdatePolicyStoreTagsResponse {
  string policy_store_id = 1;
  repeated string tags = 2;
  string updated_at = 3;
}
